--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,7 @@ google_analytics:
 # cayman-blog date format
 # refer to http://shopify.github.io/liquid/filters/date/ if you want to customize this
 cayman-blog:
-  date_format: "%b %-d, %Y"
-
-theme: # leave it empty
+  date_format: "%d-%m-%Y"
 
 # social
 author: lorepirri
